[project]
name = "atlasnet"
version = "0.1.0"
description = "AtlasNet"
requires-python = ">=3.8.5"
dependencies = [
    "numpy",
    "torch",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["auxiliary*", "dataset*", "model*"]
namespaces = true
